--- a/src/_footer.html
+++ b/src/_footer.html
@@ -5,7 +5,7 @@
                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 Copyright &copy;
                 <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made
-                with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com"
+                with <i class="bi-heart-fill text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com"
                     target="_blank">Colorlib</a>
                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
