--- a/src/_header.html
+++ b/src/_header.html
@@ -11,6 +11,7 @@
         href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700,900|Oswald:400,700">
 
     <link rel="stylesheet" href="/css/bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="/fonts/bootstrap-icons/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/style.css">
 
 </head>
