--- a/src/_nav.html
+++ b/src/_nav.html
@@ -11,7 +11,7 @@
           <nav class="site-navigation text-right text-md-right" role="navigation">
 
             <div class="d-inline-block d-lg-none ml-md-0 mr-auto py-3"><a href="#"
-                class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
+                class="site-menu-toggle js-menu-toggle text-white"><span class="bi-list h3"></span></a></div>
 
             <ul class="site-menu js-clone-nav d-none d-lg-block">
               <li class="@@home"><a href="/${{ _lang_ }}$/index.html">${{ nav.home }}$</a></li>
@@ -38,7 +38,7 @@
 <div class="site-mobile-menu">
   <div class="site-mobile-menu-header">
     <div class="site-mobile-menu-close mt-3">
-      <span class="icon-close2 js-menu-toggle"></span>
+      <span class="bi-x js-menu-toggle"></span>
     </div>
   </div>
   <div class="site-mobile-menu-body"></div>
