--- a/src/_nav.html
+++ b/src/_nav.html
@@ -16,6 +16,7 @@
             <ul class="site-menu js-clone-nav d-none d-lg-block">
               <li class="@@home"><a href="/${{ _lang_ }}$/index.html">${{ nav.home }}$</a></li>
               <li class="@@info"><a href="/${{ _lang_ }}$/info.html">${{ nav.info }}$</a></li>
+              <li class="@@recommendations"><a href="/${{ _lang_ }}$/recommendations.html">${{ nav.recommendations }}$</a></li>
               <li class="@@contact"><a href="/${{ _lang_ }}$/contact.html">${{ nav.contact }}$</a></li>
               <li class="has-children">
                 <a href="#" class="collapse-link">${{ nav.language }}$</a>
