--- a/src/recommendations.html
+++ b/src/recommendations.html
@@ -1,23 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-@@include('_header.html')
+<html lang="${{ _lang_ }}$">
+@@include('_header.html', {"description": "${{ recommendations.meta.description }}$"})
 
 <body>
 
   @@include('_nav.html', {"recommendations": "active"})
 
-  <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url('/images/hero_bg_3.jpg');">
-    <div class="container">
-      <div class="row align-items-center justify-content-center">
-        <div class="col-md-7 text-center">
-          <h1 class="text-white">${{ recommendations.header.title }}$</h1>
-          <p>${{ recommendations.header.subtitle }}$</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
+  @@include('_hero.html', {
+    "image": "hero_bg_3", 
+    "title": "${{ recommendations.header.title }}$",
+    "subtitle": "${{ recommendations.header.subtitle }}$"
+  })
 
   <div class="site-section border-bottom">
     <div class="container">
