--- a/src/contact.html
+++ b/src/contact.html
@@ -6,18 +6,11 @@
 
   @@include('_nav.html', {"contact": "active"})
 
-  <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url('/images/hero_bg_1.jpg');">
-    <div class="container">
-      <div class="row align-items-center justify-content-center">
-        <div class="col-md-7 text-center">
-          <h1 class="text-white">${{ contact.header.title }}$</h1>
-          <p>${{ contact.header.subtitle }}$</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
+  @@include('_hero.html', {
+    "image": "hero_bg_1", 
+    "title": "${{ contact.header.title }}$",
+    "subtitle": "${{ contact.header.subtitle }}$"
+  })
 
   <div class="site-section border-bottom">
     <div class="container">
