--- a/src/_header.html
+++ b/src/_header.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700,900|Oswald:400,700">
+        href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700,900|Oswald:400,700&display=swap">
 
     <link rel="stylesheet" href="/css/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="/fonts/bootstrap-icons/bootstrap-icons.css">
