Added description meta tag

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
-@@include('_header.html')
+@@include('_header.html', {"description": "${{ index.meta.description }}$"})
 
 <body>
 
