Fixed language in html tag

--- a/src/contact.html
+++ b/src/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="${{ _lang_ }}$">
 @@include('_header.html', {"description": "${{ contact.meta.description }}$"})
 
 <body>
