--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="${{ _lang_ }}$">
 @@include('_header.html', {"description": "${{ index.meta.description }}$"})
 
 <body>
