--- a/src/info.html
+++ b/src/info.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="${{ _lang_ }}$">
 @@include('_header.html', {"description": "${{ info.meta.description }}$"})
 
 <body>
