--- a/src/info.html
+++ b/src/info.html
@@ -58,10 +58,10 @@
 
         <div class="col-md-6">
           <h2 id="parking">${{ info.parking.title }}$</h2>
-          <a href="/images/map.png">
+          <a href="/images/info/map.png">
             <picture>
-              <source type="image/webp" srcset="/images/map.webp">
-              <img src="/images/map.png" class="pt-2 pr-5 pb-4" style="width: 100%;" alt="${{ info.parking.image }}$">
+              <source type="image/webp" srcset="/images/info/map.webp">
+              <img src="/images/info/map.png" class="pt-2 pr-5 pb-4" style="width: 100%;" alt="${{ info.parking.image }}$">
             </picture>
           </a>          
           <p>${{ info.parking.text1 }}$</p>
