--- a/src/_hero.html
+++ b/src/_hero.html
@@ -1,9 +1,5 @@
 <div class="site-blocks-cover inner-page-cover overlay">
-  <picture>
-    <source type="image/webp" srcset="/images/hero/@@image_small.webp" media="(max-width: 479px)">
-    <source type="image/webp" srcset="/images/hero/@@image.webp">
-    <img src="/images/hero/@@image.jpg" alt="Hero background image">
-  </picture>
+  @@include('_picture.html', { "image": "hero/@@image", "alt": "Hero background image" })
 
   <div class="container">
     <div class="row align-items-center justify-content-center">
