--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,7 @@
   @@include('_nav.html', {"home": "active"})
 
   <div class="site-blocks-cover overlay">
-    <picture>
-      <source type="image/webp" srcset="/images/hero/hero_bg_2_small.webp" media="(max-width: 479px)">
-      <source type="image/webp" srcset="/images/hero/hero_bg_2.webp">
-      <img src="/images/hero/hero_bg_2.jpg" alt="Hero background image">
-    </picture>
+    @@include('_picture.html', { "image": "hero/hero_bg_2", "alt": "Hero background image" })
 
     <div class="container">
       <div class="row align-items-center justify-content-center">
