Added individual title for each page

--- a/src/_header.html
+++ b/src/_header.html
@@ -1,5 +1,5 @@
 <head>
-    <title>Chalet Gassegüetli in Schönried</title>
+    <title>@@title | comeup.ch</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
