--- a/src/paragliding.html
+++ b/src/paragliding.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-@@include('_header.html')
+
+@@include('_header.html', {
+  "description": "${{ paragliding.meta.description }}$",
+  "title": "${{ paragliding.meta.title }}$"
+})
 
 <body>
   @@include('_nav.html', {"paragliding": "active"})
 
-  <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url('/images/hero_bg_1.jpg')">
-    <div class="container">
-      <div class="row align-items-center justify-content-center">
-        <div class="col-md-7 text-center">
-          <h1 class="text-white">${{ paragliding.header.title }}$</h1>
-          <p>${{ paragliding.header.subtitle }}$</p>
-        </div>
-      </div>
-    </div>
-  </div>
+  @@include('_hero.html', {
+    "image": "hero_bg_1", 
+    "title": "${{ paragliding.header.title }}$",
+    "subtitle": "${{ paragliding.header.subtitle }}$"
+  })
 
   <div class="site-section border-bottom">
     <div class="container">
