--- a/src/_nav.html
+++ b/src/_nav.html
@@ -20,6 +20,7 @@
                 <a href="#" class="collapse-link">${{ nav.activities }}$</a>
                 <ul class="dropdown arrow-top">
                   <li class="@@paragliding"><a href="/${{ _lang_ }}$/paragliding.html">${{ nav.paragliding }}$</a></li>
+                  <li class="@@skiing"><a href="/${{ _lang_ }}$/skiing.html">${{ nav.skiing }}$</a></li>
                 </ul>
               </li>
               <li class="@@recommendations"><a href="/${{ _lang_ }}$/recommendations.html">${{ nav.recommendations }}$</a></li>
